# schash

./: .gitignore  LICENSE  README.md  SUBMISSION_READY.md  aucmcs.cls  main.tex  paper_additions.txt  pyproject.toml  pytest.ini  reproduce.py  requirements.txt
sch/: __init__.py  __main__.py  affine.py  constants.py  cryptanalysis.py  degree_tracking.py  encoding.py  field.py  params.py  permutation.py  security_analysis.py  sponge.py  triangular.py
scripts/: bench.py  bench_detailed.py  benchmark_comparison.py  differential_analysis.py  export_system.py  formal_verification.py  gen_vectors.py  generate_paper_additions.py  generate_tables.py  groebner_experiment.py  higher_order_diff.py  linear_analysis.py  plots.py
tests/: test_vectors.py  test_vectors_generated.json
