[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "schash"
version = "0.1.0"
description = "Reference implementation of Symbolic Composition Hashing (SCH)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.optional-dependencies]
test = ["pytest>=7.0"]
analysis = ["sympy>=1.13", "matplotlib>=3.0"]
bench = ["galois>=0.4"]
all = ["pytest>=7.0", "sympy>=1.13", "matplotlib>=3.0", "galois>=0.4"]

[project.scripts]
sch = "sch.__main__:main"
